# ai-bookkeeper

./: .dockerignore  .env.local.sample  .env.staging.sample  .gitignore  ACCEPTANCE_REPORT_SPRINT11.txt  AD_READY_DEPLOYMENT_GUIDE.md  AD_READY_SUMMARY.md  AGGRESSIVE_GROWTH_FINAL_SUMMARY.md  AGGRESSIVE_GROWTH_PROGRESS.md  AGRESSIVE_GROWTH_V2_STATUS.md  AI_BOOKKEEPER_COMPLETE_TECHNICAL_OUTLINE.html  AI_BOOKKEEPER_COMPLETE_TECHNICAL_OUTLINE.md  API_ROUTE_FIX_NEEDED.md  BACKEND_TODO_PROGRESS.md  BACKGROUND_JOBS_GUIDE.md  BACKGROUND_JOBS_IMPLEMENTATION_COMPLETE.md  BACKGROUND_JOBS_README.md  BACKGROUND_JOBS_VISUAL_FLOW.md  BETA_ONBOARDING.md  BILLING_IMPLEMENTATION_COMPLETE.md  BILLING_IMPLEMENTATION_STATUS.md  BILLING_TEST_MODE_NOTES.md  BILLING_VERIFICATION_CHECKLIST.md  BUILD_SUMMARY.md  CANONICAL_CUTOVER_SUMMARY.md  CANONICAL_CUTOVER_VERIFICATION.md  CANONICAL_DOMAIN_CUTOVER.md  CAT_V2_ACTIVATION.md  CAT_V2_COMPLETE_CORE.md  CAT_V2_DELIVERY.md  CAT_V2_DEPLOYMENT_STATUS.md  CAT_V2_FINAL_STATUS.md  CAT_V2_PROGRESS.md  CAT_V2_STATUS.md  CHANGELOG.md  CI_FIXES_SUMMARY.md  CI_RUNBOOK.md  CLOSED_BETA_DELIVERABLE.md  CLOSED_BETA_SUMMARY.md  CLOUD_BUILD_PERMISSION_FIX.md  (+291 more)
.github/: pull_request_template.md
app/: Dockerfile  __init__.py  diag.py  main.py  metrics.py
config/: __init__.py  env.template  security_headers.py  settings.py  stripe_plans.py  stripe_price_map.json
configs/: crawler_config.yaml  free_tool.yaml  public_samples.yaml
deploy/: redis.yml  staging_postgres.yml
docs/: BILLING_RUNBOOK.md  CRAWLER_MULTI_FORMAT.md  CRAWLER_README.md  DATA_SAFETY_NOTES.md  (+19 more)
(+2109 files in other folders)
