[project]
name = "ai-bookkeeper"
version = "0.1.0"
description = "AI-powered bookkeeping system with bank statement ingestion and automated journal entry posting"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.3",
    "ofxparse>=0.21",
    "pytesseract>=0.3.10",
    "pypdf2>=3.0.1",
    "sentence-transformers>=2.2.2",
    "chromadb>=0.4.22",
    "openai>=1.12.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.3",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "Levenshtein>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

